Finishes markup text-content index.html

--- a/index.html
+++ b/index.html
@@ -5,121 +5,133 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>promomix</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.2.0/modern-normalize.min.css">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-  <header>
-    <a href="./">promomix</a>
-    <nav>
-      <ul>
-        <li><button type="button">поиск</button></li>
-        <li><a href="tel:84964290900">8 496 429 09 00</a></li>
-        <li><button type="button">оставить заявку</button></li>
-      </ul>
-    </nav>
+  <header class="header">
+    <a class="link" href="./">promomix</a>
+    <ul class="list nav">
+      <li class="list-item"><button class="button" type="button">Поиск</button></li>
+      <li class="list-item"><a class="link upper" href="tel:84964290900">8 496 429 09 00</a></li>
+      <li class="list-item"><button class="button upper bold" type="button">Оставить заявку</button></li>
+    </ul>
   </header>
   <main>
-    <section>
-      <h1><span lang="en">Promomix</span> – 
+    <section class="hero">
+      <h1 class="page-title"><span class="accent" lang="en">Promomix – </span>
       рекламное агентство
       полного цикла</h1>
-      <ul>
-        <li><a href="">facebook</a></li>
-        <li><a href="">vkontakte</a></li>
-        <li><a href="">instagram</a></li>
+      <ul class="list">
+        <li><a class="link" href="">Facebook</a></li>
+        <li><a class="link" href="">Vkontakte</a></li>
+        <li><a class="link" href="">Instagram</a></li>
       </ul>
     </section>
-    <section>
-      <p>услуги</p>
-      <h2>ключевые направления</h2>
-      <ul>
-        <li><a href="">наружная реклама</a></li>
-        <li><a href="">широкоформатная печать</a></li>
-        <li><a href="">рекламная полиграфия</a></li>
-        <li><a href="">сувенирная продукция</a></li>
-        <li><a href="">внутрення реклама</a></li>
-        <li><a href="">брендирование одежды</a></li>
-        <li><a href="">брендирование транспорта</a></li>
-        <li><a href="">все услуги</a></li>
+    <section class="services">
+      <p class="title-label">Услуги</p>
+      <h2 class="section-title">Ключевые <span class="accent">направления</span></h2>
+      <ul class="list">
+        <li><a class="link" href="">Наружная реклама</a></li>
+        <li><a class="link" href="">Широкоформатная печать</a></li>
+        <li><a class="link" href="">Рекламная полиграфия</a></li>
+        <li><a class="link" href="">Сувенирная продукция</a></li>
+        <li><a class="link" href="">Внутрення реклама</a></li>
+        <li><a class="link" href="">Брендирование одежды</a></li>
+        <li><a class="link" href="">Брендирование транспорта</a></li>
+        <li><a class="link" href="">Все услуги</a></li>
       </ul>
     </section>
-    <section>
-      <p>наши преимущества</p>
-      <h2>создаем рекламу и формируем имидж компаний</h2>
-      <ul>
-        <li>
-          <p>18+</p>
+    <section class="benefits">
+      <p class="title-label">Наши преимущества</p>
+      <h2 class="section-title"><span class="accent">Создаем рекламу</span> и формируем имидж компаний</h2>
+      <ul class="list">
+        <li class="benefits-item">
+          <span class="accent benefits-number">18+</span>
           <p>лет опыта на рекламном рынке</p>
         </li>
-        <li>
-          <p>250+</p>
+        <li class="benefits-item">
+          <span class="accent benefits-number">250+</span>
           <p>реализованных
           проектов</p>
         </li>
-        <li>
-          <p>37</p>
+        <li class="benefits-item">
+          <span class="accent benefits-number">37</span>
           <p>квалифицированных
           сотрудников</p>
         </li>
-        <li>
-          <p>14+</p>
+        <li class="benefits-item">
+          <span class="accent benefits-number">14+</span>
           <p>профессионального
           оборудования</p>
         </li>
       </ul>
     </section>
-    <section>
-      <p>наши работы</p>
-      <h2>воплощаем идеи</h2>
-      <ul>
+    <section class="works">
+      <p class="title-label">Наши работы</p>
+      <h2 class="section-title">Воплощаем <span class="accent">идеи</span></h2>
+      <ul class="list">
         <li>
-          <div>
-            <img src="./images/ourworks/img1.jpg" width="570" height="370" alt="">
-          </div>
-          <h3>кафе Starbucks Coffee</h3>
-          <p>вывеска объемная</p>
+          <a class="link" href="">
+            <div>
+              <img src="./images/ourworks/img1.jpg" width="570" height="370" alt="">
+              <h3>Кафе Starbucks Coffee</h3>
+            </div>
+          </a>
+          <p class="upper">Вывеска объемная</p>
         </li>
         <li>
-          <div>
-            <img src="./images/ourworks/img2.jpg" width="570" height="570" alt="">
-          </div>
-          <h3>bio бутик Flora</h3>
-          <p>наружная реклама</p>
+          <a class="link" href="">
+            <div>
+              <img src="./images/ourworks/img2.jpg" width="570" height="570" alt="">
+              <h3>Bio бутик Flora</h3>
+            </div>
+          </a>
+          <p>Наружная реклама</p>
         </li>
         <li>
-          <div>
-            <img src="./images/ourworks/img3.jpg" width="570" height="570" alt="">
-          </div>
-          <h3>сеть ресторанов Emosi</h3>
-          <p>вывеска объемная</p>
+          <a class="link" href="">
+            <div>
+              <img src="./images/ourworks/img3.jpg" width="570" height="570" alt="">
+              <h3>Сеть ресторанов Emosi</h3>
+            </div>
+          </a>
+          <p>Вывеска объемная</p>
         </li>
         <li>
-          <div>
-            <img src="./images/ourworks/img4.jpg" width="570" height="370" alt="">
-          </div>
-          <h3>бизнес центр Sierra</h3>
-          <p>фирменный стиль</p>
+          <a class="link" href="">
+            <div>
+              <img src="./images/ourworks/img4.jpg" width="570" height="370" alt="">
+              <h3>Бизнес центр Sierra</h3>
+            </div>
+          </a>
+          <p>Фирменный стиль</p>
         </li>
         <li>
-          <div>
-            <img src="./images/ourworks/img5.jpg" width="570" height="570" alt="">
-          </div>
-          <h3>релакс студия Flora</h3>
-          <p>фирменный стиль</p>
+          <a class="link" href="">
+            <div>
+              <img src="./images/ourworks/img5.jpg" width="570" height="570" alt="">
+              <h3>Релакс студия Flora</h3>
+            </div>
+          </a>
+          <p>Фирменный стиль</p>
         </li>
         <li>
-          <div>
-            <img src="./images/ourworks/img6.jpg" width="570" height="370" alt="">
-          </div>
-          <h3>магазин Levi's</h3>
-          <p>входная группа и вывеска</p>
+          <a class="link" href="">
+            <div>
+              <img src="./images/ourworks/img6.jpg" width="570" height="370" alt="">
+              <h3>Магазин Levi's</h3>
+            </div>
+          </a>
+          <p>Входная группа и вывеска</p>
         </li>
       </ul>
-      <button type="button">все работы</button>
+      <button class="button" type="button">Все работы</button>
     </section>
     <section>
-      <p>наши партнеры</p>
-      <h2>400+ компаний доверяют нам</h2>
-      <ul>
+      <p class="title-label">Наши партнеры</p>
+      <h2 class="section-title"><span class="accent">400+</span> компаний доверяют нам</h2>
+      <ul class="list">
         <li><img src="./images/ourpartners/img1.svg" width="114" height="36" alt=""></li>
         <li><img src="./images/ourpartners/img2.svg" width="124" height="64" alt=""></li>
         <li><img src="./images/ourpartners/img3.svg" width="106" height="45" alt=""></li>
@@ -131,81 +143,83 @@
         <li><img src="./images/ourpartners/img9.svg" width="139" height="28" alt=""></li>
       </ul>
     </section>
-    <section>
-      <p>статьи и новости</p>
-      <h2>все самое интересное</h2>
-      <ul>
+    <section class="news">
+      <p class="title-label">Статьи и новости</p>
+      <h2 class="section-title">Все самое <span class="accent">интересное</span></h2>
+      <ul class="list">
         <li>
-          <p>новость</p>
+          <p class="label upper">Новость</p>
           <div>
             <img src="./images/news/img1.jpg" width="420" height="236" alt="">
           </div>
           <div>
-            <p>21.03.2020</p>
+            <p class="date">21.03.2020</p>
             <h3>Уникальная услуга «вывеска в аренду»</h3>
             <p>У владельца любого малого, но успешно развивающегося бизнеса рано или поздно возникает необходимость в дополнительной
             визуальной рекламе.</p>
-            <button type="button">подробнее</button>
+            <button class="button upper details" type="button">Подробнее</button>
           </div>
         </li>
         <li>
-          <p>статья</p>
+          <p class="label upper">Статья</p>
           <div>
             <img src="./images/news/img2.jpg" width="420" height="236" alt="">
           </div>
           <div>
-            <p>21.03.2020</p>
+            <p class="date">21.03.2020</p>
             <h3>Лайфхаки полиграфии от заказчиков</h3>
             <p>Лайфхаки полиграфии от опытных заказчиков. Сегодня услуги по печати рекламных материалов, кажется, не предоставляет
             только ленивый. Так как предложений очень много, то, соответственно и достаточно высок.</p>
-            <button type="button">подробнее</button>
+            <button class="button upper details" type="button">Подробнее</button>
           </div>
         </li>
         <li>
-          <p>статья</p>
+          <p class="label upper">Статья</p>
           <div>
             <img src="./images/news/img3.jpg" width="420" height="236" alt="">
           </div>
           <div>
-            <p>21.03.2020</p>
+            <p class="date">21.03.2020</p>
             <h3>Полиграфия для бизнеса</h3>
             <p>Чтобы выделиться среди конкурентов на современном рынке товаров и услуг, или познакомить как можно большее количество людей с новым предприятием, нужна эффективная реклама.</p>
-            <button type="button">подробнее</button>
+            <button class="button upper details" type="button">подробнее</button>
           </div>
         </li>
       </ul>
-      <a href="">все статьи</a>
+      <button class="button" type="button">Все статьи</button>
     </section>
   </main>
-  <footer>
-    <div>
+  <footer class="footer">
+    <div class="top-footer">
       <div>
-        <a href=""><span lang="en">Promomix</span> – рекламное агентство полного цикла</a>
-        <button type="button">оставить заявку</button>
+        <a class="link fotter-title" href=""><span class="accent" lang="en">Promomix –</span> рекламное агентство полного цикла</a>
+        <button class="button upper" type="button">Оставить заявку</button>
       </div>
-      <ul>
-        <li><a href="./html/about.html">о компании</a></li>
-        <li><a href="">услуги</a></li>
-        <li><a href="">наши работы</a></li>
-        <li><a href="">сервис</a></li>
-        <li><a href="">комплексные решения</a></li>
-        <li><a href="">статьи и новости</a></li>
-        <li><a href="">контакты</a></li>
-      </ul>
+      <nav>
+        <ul class="list main-nav">
+          <li><a class="link" href="./html/about.html">О компании</a></li>
+          <li><a class="link" href="">Услуги</a></li>
+          <li><a class="link" href="">Наши работы</a></li>
+          <li><a class="link" href="">Сервис</a></li>
+          <li><a class="link" href="">Комплексные решения</a></li>
+          <li><a class="link" href="">Статьи и новости</a></li>
+          <li><a class="link" href="">Контакты</a></li>
+        </ul>
+      </nav>
       <div>
         <p>Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
         <form>
-          <input type="email" placeholder="Ваш e-mail">
+          <input class="placeholder" type="email" placeholder="Ваш e-mail">
           <button type="submit">&#8594;</button>
         </form>
       </div>
     </div>
-    <div>
+    <div class="low-footer">
       <p>&copy; 2011-2020 Promomix</p>
-      <ul>
-        <li><a href=""></a>facebook</li>
-        <li><a href=""></a>vkontakte</li>
-        <li><a href=""></a>instagram</li>
+      <ul class="list">
+        <li><a class="link" href=""></a>Facebook</li>
+        <li><a class="link" href=""></a>Vkontakte</li>
+        <li><a class="link" href=""></a>Instagram</li>
       </ul>
     </div>
   </footer>
