--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>promomix</title>
+  <title>О компании</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.2.0/modern-normalize.min.css">
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
   <header class="header">
@@ -19,9 +19,9 @@
   </header>
   <main>
     <section class="hero">
-      <h1 class="page-title"><span class="accent" lang="en">Promomix – </span>
-      рекламное агентство
-      полного цикла</h1>
+      <h1 class="page-title">О компании</h1
+      <span class="accent" lang="en">Promomix – </span>рекламное агентство
+      полного цикла>
       <ul class="list">
         <li><a class="link" href="">Facebook</a></li>
         <li><a class="link" href="">Vkontakte</a></li>
@@ -110,7 +110,7 @@
         <li>
           <a class="link" href="">
             <div>
-              <img src="./images/ourworks/img5.jpg" width="570" height="570" alt="">
+              <img src="./images/ourworks/img6.jpg" width="570" height="370" alt="">
               <h3>Релакс студия Flora</h3>
             </div>
           </a>
@@ -119,7 +119,7 @@
         <li>
           <a class="link" href="">
             <div>
-              <img src="./images/ourworks/img6.jpg" width="570" height="370" alt="">
+              <img src="./images/ourworks/img5.jpg" width="570" height="570" alt="">
               <h3>Магазин Levi's</h3>
             </div>
           </a>
