Fixes text markup

--- a/html/polygraphy.html
+++ b/html/polygraphy.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Услуги</title>
+  <title>Рекламная полиграфия</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.2.0/modern-normalize.min.css">
   <link rel="stylesheet" href="../css/styles.css">
 </head>
@@ -18,8 +18,9 @@
     </ul>
   </header>
   <main>
-    <section class="hero-features">
-      <h1 class="page-title">Услуги</h1>
+    <section class="hero-polygraphyt">
+      <h1 class="page-title">Рекламная полиграфия</h1>
+      <p>Рекламная полиграфия – неизменный атрибут продвижения бизнеса на рынке, призванный увеличить продажи и выделить компанию на фоне конкурентов.</p>
       <ul class="list">
         <li class="features-item">
           <a class="link" href="">Наружная реклама</a>
@@ -126,6 +127,84 @@
         </li>
       </ul>
     </section>
+    <section class="delivery">
+      <h2 class="section-title">Доставка</h2>
+      <p>Мы лучше других понимаем, насколько важным фактором является удобная доставка, и поэтому доставляем заказы максимально
+      оперативно.</p>
+        <h3>Самовывоз из офиса</h3>
+        <p>Самовывоз из нашего офиса осуществляется бесплатно по адресу:</p>
+        <p>г. Орехово-Зуево, ул. Гагарина, д. 15В</p>
+        <h3>Доставка курьером</h3>
+        <p>Доставка курьером осуществляется в пределах МКАД на следующий день, после изготовления продукции.</p>
+        <p>менее 10 кг – <span>460 ₽</span></p>
+        <p>свыше 10 кг – <span>760 ₽</span></p>
+    </section>
+    <section class="works">
+      <h2 class="section-title">Наши работы</h2>
+      <ul class="list">
+        <li>
+          <a class="link" href="">
+            <div>
+              <img src="../images/ourworks/img1.jpg" width="360" height="270" alt="">
+              <h3>Кафе Starbucks Coffee</h3>
+            </div>
+          </a>
+          <p class="upper">Вывеска объемная</p>
+        </li>
+        <!-- <li>
+          <a class="link" href="">
+            <div>
+              <img src="../images/ourworks/img2.jpg" width="570" height="570" alt="">
+              <h3>Bio бутик Flora</h3>
+            </div>
+          </a>
+          <p>Наружная реклама</p>
+        </li> -->
+        <li>
+          <a class="link" href="">
+            <div>
+              <img src="../images/ourworks/img3.jpg" width="360" height="360" alt="">
+              <h3>Сеть ресторанов Emosi</h3>
+            </div>
+          </a>
+          <p>Вывеска объемная</p>
+        </li>
+        <!-- <li>
+          <a class="link" href="">
+            <div>
+              <img src="../images/ourworks/img4.jpg" width="570" height="370" alt="">
+              <h3>Бизнес центр Sierra</h3>
+            </div>
+          </a>
+          <p>Фирменный стиль</p>
+        </li> -->
+        <li>
+          <a class="link" href="">
+            <div>
+              <img src="../images/ourworks/img6.jpg" width="360" height="270" alt="">
+              <h3>Релакс студия Flora</h3>
+            </div>
+          </a>
+          <p>Фирменный стиль</p>
+        </li>
+        <li>
+          <a class="link" href="">
+            <div>
+              <img src="../images/ourworks/img5.jpg" width="370" height="370" alt="">
+              <h3>Магазин Levi's</h3>
+            </div>
+          </a>
+          <p>Входная группа и вывеска</p>
+        </li>
+      </ul>
+      <button class="button" type="button">Все работы</button>
+    </section>
+    <section class="application">
+      <h2 class="section-title">Заявка</h2>
+      <p>Оставьте заявку, наш менеджер обработает её и свяжется с вами
+      в ближайшее время</p>
+      <form action=""></form>
+    </section>
   </main>
   <footer class="footer">
     <div class="top-footer">
@@ -135,7 +214,7 @@
       </div>
       <nav>
         <ul class="list main-nav">
-          <li><a class="link" href="./about.html">О компании</a></li>
+          <li><a class="link" href="./html/about.html">О компании</a></li>
           <li><a class="link" href="./features.html">Услуги</a></li>
           <li><a class="link" href="./works.html">Наши работы</a></li>
           <li><a class="link" href="./services.html">Сервис</a></li>
