--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header class="header">
-    <a class="link" href="./">promomix</a>
+    <a class="link" href="./index.html">promomix</a>
     <ul class="list nav">
       <li class="list-item"><button class="button" type="button">Поиск</button></li>
       <li class="list-item"><a class="link upper" href="tel:84964290900">8 496 429 09 00</a></li>
@@ -19,7 +19,7 @@
   </header>
   <main>
     <section class="hero">
-      <h1 class="page-title">О компании</h1
+      <h1 class="page-title">О компании</h1>
       <span class="accent" lang="en">Promomix – </span>рекламное агентство
       полного цикла>
       <ul class="list">
@@ -34,12 +34,12 @@
       <ul class="list">
         <li><a class="link" href="">Наружная реклама</a></li>
         <li><a class="link" href="">Широкоформатная печать</a></li>
-        <li><a class="link" href="">Рекламная полиграфия</a></li>
+        <li><a class="link" href="./html/polygraphy.html">Рекламная полиграфия</a></li>
         <li><a class="link" href="">Сувенирная продукция</a></li>
         <li><a class="link" href="">Внутрення реклама</a></li>
         <li><a class="link" href="">Брендирование одежды</a></li>
         <li><a class="link" href="">Брендирование транспорта</a></li>
-        <li><a class="link" href="">Все услуги</a></li>
+        <li><a class="link" href="./html/features.html">Все услуги</a></li>
       </ul>
     </section>
     <section class="benefits">
@@ -198,12 +198,12 @@
       <nav>
         <ul class="list main-nav">
           <li><a class="link" href="./html/about.html">О компании</a></li>
-          <li><a class="link" href="">Услуги</a></li>
-          <li><a class="link" href="">Наши работы</a></li>
-          <li><a class="link" href="">Сервис</a></li>
-          <li><a class="link" href="">Комплексные решения</a></li>
-          <li><a class="link" href="">Статьи и новости</a></li>
-          <li><a class="link" href="">Контакты</a></li>
+          <li><a class="link" href="./html/features.html">Услуги</a></li>
+          <li><a class="link" href="./html/works.html">Наши работы</a></li>
+          <li><a class="link" href="./html/services.html">Сервис</a></li>
+          <li><a class="link" href="./html/complex.html">Комплексные решения</a></li>
+          <li><a class="link" href="./html/posts.html">Статьи и новости</a></li>
+          <li><a class="link" href="./html/contacts.html">Контакты</a></li>
         </ul>
       </nav>
       <div>
