--- a/html/about.html
+++ b/html/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header class="header">
-    <a class="link" href="./">promomix</a>
+    <a class="link" href="../index.html">promomix</a>
     <ul class="list nav">
       <li class="list-item"><button class="button" type="button">Поиск</button></li>
       <li class="list-item"><a class="link upper" href="tel:84964290900">8 496 429 09 00</a></li>
@@ -57,12 +57,12 @@
       <ul class="list">
         <li><a class="link" href="">Наружная реклама</a></li>
         <li><a class="link" href="">Широкоформатная печать</a></li>
-        <li><a class="link" href="">Рекламная полиграфия</a></li>
+        <li><a class="link" href="../html/polygraphy.html">Рекламная полиграфия</a></li>
         <li><a class="link" href="">Сувенирная продукция</a></li>
         <li><a class="link" href="">Внутрення реклама</a></li>
         <li><a class="link" href="">Брендирование одежды</a></li>
         <li><a class="link" href="">Брендирование транспорта</a></li>
-        <li><a class="link" href="">Все услуги</a></li>
+        <li><a class="link" href="../html/features.html">Все услуги</a></li>
       </ul>
     </section>
     <section class="history">
@@ -175,12 +175,12 @@
       <nav>
         <ul class="list main-nav">
           <li><a class="link" href="./html/about.html">О компании</a></li>
-          <li><a class="link" href="">Услуги</a></li>
-          <li><a class="link" href="">Наши работы</a></li>
-          <li><a class="link" href="">Сервис</a></li>
-          <li><a class="link" href="">Комплексные решения</a></li>
-          <li><a class="link" href="">Статьи и новости</a></li>
-          <li><a class="link" href="">Контакты</a></li>
+          <li><a class="link" href="./features.html">Услуги</a></li>
+          <li><a class="link" href="./works.html">Наши работы</a></li>
+          <li><a class="link" href="./services.html">Сервис</a></li>
+          <li><a class="link" href="./complex.html">Комплексные решения</a></li>
+          <li><a class="link" href="./posts.html">Статьи и новости</a></li>
+          <li><a class="link" href="./contacts.html">Контакты</a></li>
         </ul>
       </nav>
       <div>
