Start work with flex

--- a/index.html
+++ b/index.html
@@ -5,28 +5,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>О компании</title>
+  <link rel="stylesheet" href="./fonts/stylesheet.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.2.0/modern-normalize.min.css">
   <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
   <header class="header">
-    <a class="link" href="./index.html">promomix</a>
-    <ul class="list nav">
-      <li class="list-item"><button class="button" type="button">Поиск</button></li>
-      <li class="list-item"><a class="link upper" href="tel:84964290900">8 496 429 09 00</a></li>
-      <li class="list-item"><button class="button upper bold" type="button">Оставить заявку</button></li>
-    </ul>
+    <div class="container">
+      <a class="link" href="./index.html"><img src="/icons/logo.svg" alt=""></a>
+      <ul class="list nav">
+        <li class="list-item"><img src="./icons/search.svg" width="16" height="16" alt=""><button class="button" type="button">Поиск</button></li>
+        <li class="list-item"><a class="link upper" href="tel:84964290900">8 496 429 09 00</a></li>
+        <li class="list-item"><button class="button upper bold" type="button">Оставить заявку</button></li>
+      </ul>
+    </div>
   </header>
   <main>
     <section class="hero">
-      <h1 class="page-title">О компании</h1>
-      <span class="accent" lang="en">Promomix – </span>рекламное агентство
-      полного цикла>
-      <ul class="list">
-        <li><a class="link" href="">Facebook</a></li>
-        <li><a class="link" href="">Vkontakte</a></li>
-        <li><a class="link" href="">Instagram</a></li>
-      </ul>
+     <div class="container">
+        <h1 class="page-title"><span class="accent" lang="en">Promomix – </span>рекламное агентство
+        полного цикла</h1>
+        <ul class="list social-list">
+          <li class="social-item"><a class="link" href="">Facebook</a></li>
+          <li class="social-item"><a class="link" href="">Vkontakte</a></li>
+          <li class="social-item"><a class="link" href="">Instagram</a></li>
+        </ul>
+     </div>
     </section>
     <section class="services">
       <p class="title-label">Услуги</p>
