--- a/index.html
+++ b/index.html
@@ -58,95 +58,141 @@
                     <use href="./images/sprite.svg#icon-codepen"></use>
                   </svg>
                 </div>
-              Наружная реклама
+                Наружная реклама
               </div>
             </a>
           </li>
-          <li class="direction-item"><a class="link" href="">
-            <div class="direction-icon-box">
-              <svg class="icon" width="55" height="47">
-                <use href="./images/sprite.svg#icon-printer"></use>
-              </svg>
-            </div>
-            Широкоформатная печать</a></li>
-          <li class="direction-item"><a class="link" href="./html/polygraphy.html">
-            <div class="direction-icon-box">
-              <svg class="icon" width="55" height="55">
-                <use href="./images/sprite.svg#icon-copy"></use>
-              </svg>
-            </div>
-            Рекламная полиграфия</a></li>
-          <li class="direction-item"><a class="link" href="">
-            <div class="direction-icon-box">
-              <svg class="icon" width="55" height="52">
-                <use href="./images/sprite.svg#icon-beer"></use>
-              </svg>
-            </div>
-            Сувенирная продукция</a></li>
-          <li class="direction-item"><a class="link" href="">
-            <div class="direction-icon-box">
-              <svg class="icon" width="55" height="50">
-                <use href="./images/sprite.svg#icon-chalkboard"></use>
-              </svg>
-            </div>
-            Внутрення реклама</a></li>
-          <li class="direction-item"><a class="link" href="">
-            <div class="direction-icon-box">
-              <svg class="icon" width="58" height="53">
-                <use href="./images/sprite.svg#icon-t-shirt"></use>
-              </svg>
-            </div>
-            Брендирование одежды</a></li>
-          <li class="direction-item"><a class="link" href="">
-            <div class="direction-icon-box">
-              <svg class="icon" width="55" height="55">
-                <use href="./images/sprite.svg#icon-bus"></use>
-              </svg>
-            </div>
-            Брендирование транспорта</a></li>
-          <li class="direction-item"><a class="link" href="./html/features.html">
-            <div class="direction-icon-box">
-              <svg class="icon" width="50" height="40">
-                <use href="./images/sprite.svg#icon-arrow"></use>
-              </svg>
-            </div>
-            Все услуги</a></li>
+          <li class="direction-item">
+            <a class="link" href="">
+              <div class="direction-item-box">
+                <div class="direction-icon-box">
+                  <svg class="icon" width="55" height="47">
+                    <use href="./images/sprite.svg#icon-printer"></use>
+                  </svg>
+                </div>
+                Широкоформатная печать
+              </div>
+            </a>
+          </li>
+          <li class="direction-item">
+            <a class="link" href="./html/polygraphy.html">
+              <div class="direction-item-box">
+                <div class="direction-icon-box">
+                  <svg class="icon" width="55" height="55">
+                    <use href="./images/sprite.svg#icon-copy"></use>
+                  </svg>
+                </div>
+                Рекламная полиграфия
+              </div>
+            </a>
+          </li>
+          <li class="direction-item">
+            <a class="link" href="">
+              <div class="direction-item-box">
+                <div class="direction-icon-box">
+                  <svg class="icon" width="55" height="52">
+                    <use href="./images/sprite.svg#icon-beer"></use>
+                  </svg>
+                </div>
+                Сувенирная продукция
+              </div>
+            </a>
+          </li>
+          <li class="direction-item">
+            <a class="link" href="">
+              <div class="direction-item-box">
+                <div class="direction-icon-box">
+                  <svg class="icon" width="55" height="50">
+                    <use href="./images/sprite.svg#icon-chalkboard"></use>
+                  </svg>
+                </div>
+                Внутрення реклама
+              </div>
+            </a>
+          </li>
+          <li class="direction-item">
+            <a class="link" href="">
+              <div class="direction-item-box">
+                <div class="direction-icon-box">
+                  <svg class="icon" width="58" height="53">
+                    <use href="./images/sprite.svg#icon-t-shirt"></use>
+                  </svg>
+                </div>
+                Брендирование одежды
+              </div>
+            </a>
+          </li>
+          <li class="direction-item">
+            <a class="link" href="">
+              <div class="direction-item-box">
+                <div class="direction-icon-box">
+                  <svg class="icon" width="55" height="55">
+                    <use href="./images/sprite.svg#icon-bus"></use>
+                  </svg>
+                </div>
+                Брендирование транспорта
+              </div>
+            </a>
+          </li>
+          <li class="direction-item">
+            <a class="link" href="./html/features.html">
+              <div class="direction-item-box">
+                <div class="direction-icon-box">
+                  <svg class="icon" width="50" height="40">
+                    <use href="./images/sprite.svg#icon-arrow"></use>
+                  </svg>
+                </div>
+                Все услуги
+              </div>
+            </a>
+          </li>
         </ul>
       </div>
     </section>
-    <section class="benefits">
+    <section class="benefits section">
       <div class="container">
-        <p class="title-label">Наши преимущества</p>
-        <h2 class="section-title"><span class="accent">Создаем рекламу</span> и формируем имидж компаний</h2>
-        <ul class="list">
-          <li class="benefits-item">
-            <span class="accent benefits-number">18+</span>
-            <p>лет опыта на рекламном рынке</p>
-          </li>
-          <li class="benefits-item">
-            <span class="accent benefits-number">250+</span>
-            <p>реализованных
-              проектов</p>
-          </li>
-          <li class="benefits-item">
-            <span class="accent benefits-number">37</span>
-            <p>квалифицированных
-              сотрудников</p>
-          </li>
-          <li class="benefits-item">
-            <span class="accent benefits-number">14+</span>
-            <p>профессионального
-              оборудования</p>
-          </li>
-        </ul>
+        <div class="benefits-container">
+          <div class="container-section-title">
+            <p class="title-label">Наши преимущества</p>
+            <h2 class="section-title"><span class="accent">Создаем рекламу</span><br> и формируем имидж<br> компаний</h2>
+          </div>
+          <div class="container-list">
+            <ul class="list">
+              <li class="benefits-item">
+                <span class="accent benefits-number">18+</span>
+                <div class="container-p">
+                  <p>лет опыта на рекламном рынке</p>
+                </div>
+              </li>
+              <li class="benefits-item">
+                <span class="accent benefits-number">250+</span>
+                <div class="container-p">
+                  <p>реализованных проектов</p>
+                </div>
+              </li>
+              <li class="benefits-item">
+                <span class="accent benefits-number">37</span>
+                <div class="container-p">
+                  <p>квалифицированных сотрудников</p>
+                </div>
+              </li>
+              <li class="benefits-item">
+                <span class="accent benefits-number">14+</span>
+                <div class="container-p">
+                  <p>профессионального оборудования</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
-    <section class="works">
+    <section class="works section">
       <div class="container">
         <p class="title-label">Наши работы</p>
         <h2 class="section-title">Воплощаем <span class="accent">идеи</span></h2>
         <ul class="list">
-          <li>
+          <li class="item">
             <a class="link" href="">
               <div>
                 <img src="./images/ourworks/img1.jpg" width="570" height="370" alt="">
@@ -155,7 +201,7 @@
             </a>
             <p class="upper">Вывеска объемная</p>
           </li>
-          <li>
+          <li class="item">
             <a class="link" href="">
               <div>
                 <img src="./images/ourworks/img2.jpg" width="570" height="570" alt="">
@@ -164,7 +210,7 @@
             </a>
             <p>Наружная реклама</p>
           </li>
-          <li>
+          <li class="item">
             <a class="link" href="">
               <div>
                 <img src="./images/ourworks/img3.jpg" width="570" height="570" alt="">
@@ -173,7 +219,7 @@
             </a>
             <p>Вывеска объемная</p>
           </li>
-          <li>
+          <li class="item">
             <a class="link" href="">
               <div>
                 <img src="./images/ourworks/img4.jpg" width="570" height="370" alt="">
@@ -182,7 +228,7 @@
             </a>
             <p>Фирменный стиль</p>
           </li>
-          <li>
+          <li class="item">
             <a class="link" href="">
               <div>
                 <img src="./images/ourworks/img6.jpg" width="570" height="370" alt="">
@@ -191,7 +237,7 @@
             </a>
             <p>Фирменный стиль</p>
           </li>
-          <li>
+          <li class="item">
             <a class="link" href="">
               <div>
                 <img src="./images/ourworks/img5.jpg" width="570" height="570" alt="">
@@ -204,7 +250,7 @@
         <button class="button" type="button">Все работы</button>
       </div>
     </section>
-    <section>
+    <section class="section">
       <div class="container">
         <p class="title-label">Наши партнеры</p>
         <h2 class="section-title"><span class="accent">400+</span> компаний доверяют нам</h2>
@@ -221,7 +267,7 @@
         </ul>
       </div>
     </section>
-    <section class="news">
+    <section class="news section">
       <div class="container">
         <p class="title-label">Статьи и новости</p>
         <h2 class="section-title">Все самое <span class="accent">интересное</span></h2>
