--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <h3>Bio бутик Flora</h3>
               </div>
             </a>
-            <p>Наружная реклама</p>
+            <p class="upper">Наружная реклама</p>
           </li>
           <li class="item">
             <a class="link" href="">
@@ -217,7 +217,7 @@
                 <h3>Сеть ресторанов Emosi</h3>
               </div>
             </a>
-            <p>Вывеска объемная</p>
+            <p class="upper">Вывеска объемная</p>
           </li>
           <li class="item">
             <a class="link" href="">
@@ -226,7 +226,7 @@
                 <h3>Бизнес центр Sierra</h3>
               </div>
             </a>
-            <p>Фирменный стиль</p>
+            <p class="upper">Фирменный стиль</p>
           </li>
           <li class="item">
             <a class="link" href="">
@@ -235,7 +235,7 @@
                 <h3>Релакс студия Flora</h3>
               </div>
             </a>
-            <p>Фирменный стиль</p>
+            <p class="upper">Фирменный стиль</p>
           </li>
           <li class="item">
             <a class="link" href="">
@@ -244,27 +244,33 @@
                 <h3>Магазин Levi's</h3>
               </div>
             </a>
-            <p>Входная группа и вывеска</p>
+            <p class="upper">Входная группа и вывеска</p>
           </li>
         </ul>
         <button class="button" type="button">Все работы</button>
       </div>
     </section>
-    <section class="section">
+    <section class="section partners">
       <div class="container">
-        <p class="title-label">Наши партнеры</p>
-        <h2 class="section-title"><span class="accent">400+</span> компаний доверяют нам</h2>
-        <ul class="list">
-          <li><img src="./images/ourpartners/img1.svg" width="114" height="36" alt=""></li>
-          <li><img src="./images/ourpartners/img2.svg" width="124" height="64" alt=""></li>
-          <li><img src="./images/ourpartners/img3.svg" width="106" height="45" alt=""></li>
-          <li><img src="./images/ourpartners/img4.svg" width="153" height="46" alt=""></li>
-          <li><img src="./images/ourpartners/img5.svg" width="101" height="55" alt=""></li>
-          <li><img src="./images/ourpartners/img6.svg" width="134" height="74" alt=""></li>
-          <li><img src="./images/ourpartners/img7.svg" width="125" height="62" alt=""></li>
-          <li><img src="./images/ourpartners/img8.svg" width="102" height="68" alt=""></li>
-          <li><img src="./images/ourpartners/img9.svg" width="139" height="28" alt=""></li>
-        </ul>
+        <div class="partners-container">
+          <div class="container-section-title">
+            <p class="title-label">Наши партнеры</p>
+            <h2 class="section-title"><span class="accent">400+</span> компаний доверяют нам</h2>
+          </div>
+          <div class="container-list">
+            <ul class="list">
+              <li class="item"><img src="./images/ourpartners/img1.svg" width="114" height="36" alt=""></li>
+              <li class="item"><img src="./images/ourpartners/img2.svg" width="124" height="64" alt=""></li>
+              <li class="item"><img src="./images/ourpartners/img3.svg" width="106" height="45" alt=""></li>
+              <li class="item"><img src="./images/ourpartners/img4.svg" width="153" height="46" alt=""></li>
+              <li class="item"><img src="./images/ourpartners/img5.svg" width="101" height="55" alt=""></li>
+              <li class="item"><img src="./images/ourpartners/img6.svg" width="134" height="74" alt=""></li>
+              <li class="item"><img src="./images/ourpartners/img7.svg" width="125" height="62" alt=""></li>
+              <li class="item"><img src="./images/ourpartners/img8.svg" width="102" height="68" alt=""></li>
+              <li class="item"><img src="./images/ourpartners/img9.svg" width="139" height="28" alt=""></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
     <section class="news section">
