--- a/index.html
+++ b/index.html
@@ -259,15 +259,51 @@
           </div>
           <div class="container-list">
             <ul class="list">
-              <li class="item"><img src="./images/ourpartners/img1.svg" width="114" height="36" alt=""></li>
-              <li class="item"><img src="./images/ourpartners/img2.svg" width="124" height="64" alt=""></li>
-              <li class="item"><img src="./images/ourpartners/img3.svg" width="106" height="45" alt=""></li>
-              <li class="item"><img src="./images/ourpartners/img4.svg" width="153" height="46" alt=""></li>
-              <li class="item"><img src="./images/ourpartners/img5.svg" width="101" height="55" alt=""></li>
-              <li class="item"><img src="./images/ourpartners/img6.svg" width="134" height="74" alt=""></li>
-              <li class="item"><img src="./images/ourpartners/img7.svg" width="125" height="62" alt=""></li>
-              <li class="item"><img src="./images/ourpartners/img8.svg" width="102" height="68" alt=""></li>
-              <li class="item"><img src="./images/ourpartners/img9.svg" width="139" height="28" alt=""></li>
+              <li class="item">
+                <div class="img-box">
+                  <img src="./images/ourpartners/img1.svg" width="114" height="36" alt="">
+                </div>
+              </li>
+              <li class="item">
+                <div class="img-box">
+                  <img src="./images/ourpartners/img2.svg" width="124" height="64" alt="">
+                </div>
+              </li>
+              <li class="item">
+                <div class="img-box">
+                  <img src="./images/ourpartners/img3.svg" width="106" height="45" alt="">
+                </div>
+              </li>
+              <li class="item">
+                <div class="img-box">
+                  <img src="./images/ourpartners/img4.svg" width="153" height="46" alt="">
+                </div>
+              </li>
+              <li class="item">
+                <div class="img-box">
+                  <img src="./images/ourpartners/img5.svg" width="101" height="55" alt="">
+                </div>
+              </li>
+              <li class="item">
+                <div class="img-box">
+                  <img src="./images/ourpartners/img6.svg" width="134" height="74" alt="">
+                </div>
+              </li>
+              <li class="item">
+                <div class="img-box">
+                  <img src="./images/ourpartners/img7.svg" width="125" height="62" alt="">
+                </div>
+              </li>
+              <li class="item">
+                <div class="img-box">
+                  <img src="./images/ourpartners/img8.svg" width="102" height="68" alt="">
+                </div>
+              </li>
+              <li class="item">
+                <div class="img-box">
+                  <img src="./images/ourpartners/img9.svg" width="139" height="28" alt="">
+                </div>
+              </li>
             </ul>
           </div>
         </div>
